Major overhaul to removing a ton of the Hoag-centric identity structure. Identity is now fully config-driven and dynamic.